# Proyecto3_Webscraping_RaulMachaca_AndresTorres

./: .gitignore  Dockerfile  README.md  config.toml  docker-compose.yml  entrypoint.sh  pyproject.toml
data/: .gitignore  products_20260202_160401.csv  products_20260202_160401.json  products_20260202_170202.csv  products_20260202_170403.csv  products_20260202_171001.csv  products_20260202_171203.csv  products_20260202_171629.csv  products_20260202_171801.csv  products_20260202_171801.json
reports/: dashboard.html
src/game_scraper/: config.py  main.py  models.py  parser.py  reports.py  scraper.py  storage.py
src/game_scraper/templates/: dashboard.html
tests/: test_parser.py  test_scraper.py
